# Data_Fitting

./: .gitignore  README.md  data_excel_example.xlsx  data_excel_example_averaged.xlsx  data_fit.py  data_fit.txt  pyproject.toml  requirements.txt
src/data_fitting/: __init__.py  core.py
